<resources>
    <string name="app_name">SmartFoodMenu</string>
    <string name="app_changelog">
        <![CDATA[
         <i>Version 3.3.1</i><br />
        - New adaptive icon<br />
        - Targeting Android Pie<br />
        - Builtin libs updates<br />
        - App size and speed optimization<br />
        - Bug fixes<br />
         <i>Version 3.2.7</i><br />
        - Optimizations
        - Credit parsing fixes<br />
        - Multi portal improvements<br />
        - Parsing fixes<br />
        - Send feedback improvements<br />
        - UI fixes
        - Improved SSL security
         <i>Version 3.2.0</i><br />
        - Improved portal version detection<br />
        - UI/UX improvements and fixes<br />
        - Parsing fixes<br />
         <i>Version 3.1.0</i><br />
        - Better feedback messages<br />
        - Smaller app size<br />
        - Parsing bug fixes<br />
        <br />
        <i>Replaces old app "Jídelníček"</i>]]>
    </string>
    <string name="main_today_fragment_title">Today</string>
    <string name="main_orders_fragment_title">Orders</string>
    <string name="main_edit_saved_text">Edits saved, changes will be synced on any network…</string>
    <string name="drawer_today">Today</string>
    <string name="drawer_day">Day</string>
    <string name="drawer_portal">Portal</string>
    <string name="drawer_orders">Orders</string>
    <string name="drawer_help_and_settings_group">Help and settings</string>
    <string name="drawer_feedback">Send feedback</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_add_portal">Add portal</string>
    <string name="drawer_manage_portals">Manage portals</string>
    <string name="drawer_manage_users">Manage users</string>
    <string name="drawer_add_user">Add user</string>
    <string name="drawer_add_user_description">Add child, friend…</string>
    <string name="welcome_activity_title">Quick start guide</string>
    <string name="welcome_about_action">About</string>
    <string name="welcome_privacy_action">Privacy Policy</string>
    <string name="welcome_feedback_action">Send feedback</string>
    <string name="welcome_hi_text">Hi!!!</string>
    <string name="welcome_intro_text">Thank you for downloading this app. We have to ask you for a few things to get app working. First         if you want to use this application, you have to accept the license agreement…</string>
    <string name="welcome_terms_text">
        This program comes with ABSOLUTELY NO WARRANTY; for details see About screen from the popup menu.
        This is free software, and you are welcome to redistribute it under certain conditions; check
        License in About screen for details.
        \n
        \nThis application could use Firebase Analytics and Crashlytics to anonymously track usage data within the
        application. A user could also send debug report to the developer. All debug data are considered
        as private and wouldn\'t be provided to any thirty parties.
    </string>
    <string name="welcome_accept_terms_checkbox">Accept license agreement</string>
    <string name="welcome_accept_terms_error">You have to accept license agreement</string>
    <string name="new_user_screen_title">New user</string>
    <string name="user_activity_title">User\'s detail</string>
    <string name="user_pick_picture_button">Pick profile photo</string>
    <string name="user_crop_picture_dialog">Crop profile picture</string>
    <string name="user_name_hint">Name of the user</string>
    <string name="user_empty_name_error">You have to specify profile name</string>
    <string name="user_random_name_value">Random frog</string>
    <string name="user_pick_random_name_action">RANDOM</string>
    <string name="user_list_title">Users</string>
    <string name="user_list_add_action">Add user</string>
    <string name="user_list_edit_action">Edit user</string>
    <string name="user_list_delete_action">Delete user</string>
    <string name="portal_list_screen_title">Select portal</string>
    <string name="portal_list_refresh_action">Refresh</string>
    <string name="portal_list_add_action">Add portal</string>
    <string name="portal_list_delete_action">Delete portal</string>
    <string name="portal_screen_title">Portal settings</string>
    <string name="portal_name_hint">Portal name</string>
    <string name="portal_name_empty_error">Portal name cannot be empty</string>
    <string name="portal_name_used_error">Portal name is already used</string>
    <string name="portal_reference_hint">Portal web address (or code if applicable):</string>
    <string name="portal_plugin_label">Plugin:</string>
    <string name="portal_plugin_not_found_error">Plugin %s not found :-/</string>
    <string name="portal_security_label">Connection security:</string>
    <string name="portal_location_label">Portal location:</string>
    <string name="portal_pick_location_button">Pick</string>
    <string name="portal_remove_location_button">Remove</string>
    <string name="portal_notify_about_new_food_checkbox">Notify about new food</string>
    <string name="portal_checking_portal_data">Checking portal data… Please wait…</string>
    <string name="credential_list_title">Portals management</string>
    <string name="credential_list_edit">Edit credentials</string>
    <string name="credential_list_edit_portal">Edit portal settings</string>
    <string name="credential_list_delete">Delete credential</string>
    <string name="credential_list_without_credential">Without credential</string>
    <string name="login_detail_title">Login data</string>
    <string name="login_detail_checking_data">Checking provided data… Please wait…</string>
    <string name="credential_screen_title">Credentials settings</string>
    <string name="credential_password_hint">Password:</string>
    <string name="credential_username_hint">Username:</string>
    <string name="credential_credential_groups">Credential group:</string>
    <string name="credential_group_description">Important only if you use more users…</string>
    <string name="credential_detail_checking_credential_data">Checking credential data… Please wait…</string>
    <string name="credential_notify_credit_bellow_checkbox">Notify about credit bellow</string>
    <string name="credential_notify_credit_below_text">100</string>
    <string name="credential_notify_credit_increase_checkbox">Notify about credit increase</string>
    <string name="credential_group_child">Child</string>
    <string name="credential_group_student">Student</string>
    <string name="credential_group_adult">Adult</string>
    <string name="credential_group_external_adult">External adult</string>
    <string name="menu_change_disabled">Cannot change food</string>
    <string name="menu_change_order_from_stock">Order from food stock</string>
    <string name="menu_change_offer_in_stock">Offer in food stock</string>
    <string name="menu_change_remove_from_stock">Remove from stock</string>
    <string name="menu_empty_menu_text">No menu can be shown</string>
    <string name="menu_detail_reserved">Reserved</string>
    <string name="menu_detail_offered">Offered</string>
    <string name="menu_detail_change">Change:</string>
    <string name="menu_detail_to_sync">To sync:</string>
    <string name="menu_detail_synced">Synced:</string>
    <string name="menu_detail_taken_amount">Taken amount:</string>
    <string name="menu_detail_last_change">Last change:</string>
    <string name="menu_detail_to_order">Available to order:</string>
    <string name="menu_detail_to_take">Available to take:</string>
    <string name="menu_detail_empty">-</string>
    <string name="menu_detail_not_available">not available</string>
    <string name="menu_detail_unlimited">unlimited</string>
    <string name="menu_detail_pick_new_value">Pick new value for change</string>
    <string name="credit_no_info">Without credit</string>
    <string name="credit_text">%.2f Kč</string>
    <string name="order_standard_action_description">Reserved %d, offered %d, taken %d</string>
    <string name="order_standard_info_text">%s - %s</string>
    <string name="order_delete_change">Delete change</string>
    <string name="order_show_menu">Show menu</string>
    <string name="notification_channel_failed_actions_name">Failed orders</string>
    <string name="notification_channel_failed_action_des">Shows errors when some change failed for some reason</string>
    <string name="notification_channel_new_menu_name">New menu</string>
    <string name="notification_channel_new_menu_des">Shows reminders that new menu is avaible</string>
    <string name="notification_chanel_credit_change_name">Credit changes</string>
    <string name="notification_channel_credit_change_des">Shows increase or decrease of credit</string>
    <string name="notification_order_failed_title">Some orders failed</string>
    <string name="notification_order_failed_text">%d changes failed</string>
    <string name="notification_new_menu_title">New menu found</string>
    <string name="notification_new_menu_text">%s has new menu</string>
    <string name="notification_low_credit_title">Low credit warning</string>
    <string name="notification_low_credit_text">%s for %s</string>
    <string name="notification_credit_icrease_title">Credit increased</string>
    <string name="notification_credit_icrease_text">%s for %s</string>
    <string name="feedback_subject_title">Subject of feedback</string>
    <string name="feedback_subject_empty">Subject cannot be empty</string>
    <string name="feedback_subject_msg">Write a short summary that will be used as e-mail\'s subject…</string>
    <string name="feedback_mail_text">Replace this text with all remaining details…</string>
    <string name="feedback_choose_email_app_dialog">Choose e-mail app…</string>
    <string name="pref_activity_title">Settings</string>
    <string name="pref_auto_sync_category">Automatic synchronization</string>
    <string name="pref_auto_sync_frequency">Sync frequency</string>
    <string name="pref_auto_sync_unmetered_title">Sync only on WiFi</string>
    <string name="pref_auto_sync_unmetered_summary">Use unmetered connection only</string>
    <string name="pref_auto_sync_when_opened_title">Sync when app is opened</string>
    <string name="pref_auto_sync_when_opened_summary">Always gains actual data for current day</string>
    <string name="pref_auto_sync_charging_title">Sync only when charging</string>
    <string name="pref_auto_sync_charging_summary">Save battery life</string>
    <string name="pref_notification_category">Notification</string>
    <string name="pref_notification_title">Credit and menu notification</string>
    <string name="pref_notification_summary">Notifies about credit changes</string>
    <string name="pref_advanced_settings_category">Advanced settings</string>
    <string name="pref_auto_update_portals_title">Updates portals settings automatically</string>
    <string name="pref_auto_update_portals_summary">Keep portals always updated (replaces edits)</string>
    <string name="pref_update_portals_now_title">Update portals now</string>
    <string name="pref_update_portals_now_summary">Download newest data from web server</string>
    <string name="pref_portal_updating_action">Updating portals…</string>
    <string name="pref_plugins_timeout_title">Plugins timeout</string>
    <string name="pref_about_category">About</string>
    <string name="help_screen_title">Help, tips and tricks…</string>
    <string name="help_title">Here are a few tips about this app…</string>
    <string name="help_sub_title">Can be shown later from menu…</string>
    <string name="help_long_press_text">Every list item has more options on long press</string>
    <string name="help_icons_section_text">Icons in the app:</string>
</resources>