<!--
  ~ SmartFoodMenu - Android application for canteens extendable with plugins
  ~
  ~ Copyright © 2016-2018  Martin Mareš <mmrmartin[at]gmail[dot]com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.maresmar.sfm.view.guide.WelcomeActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="1000"
        android:title="@string/welcome_about_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="900"
        android:title="@string/welcome_privacy_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="500"
        android:title="@string/welcome_feedback_action"
        app:showAsAction="never" />
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/advanced_check_box"
            android:checkable="true"
            android:orderInCategory="100"
            android:title="@string/pref_advanced_settings_category"
            app:showAsAction="never|withText" />
    </group>
</menu>
