<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SmartFoodMenu - Android application for canteens extendable with plugins
  ~
  ~ Copyright © 2016-2018  Martin Mareš <mmrmartin[at]gmail[dot]com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/credential_edit_credential"
        android:title="@string/credential_list_edit" />
    <item android:id="@+id/credential_edit_portal"
        android:title="@string/credential_list_edit_portal" />
    <item android:id="@+id/credential_delete"
        android:title="@string/credential_list_delete" />
</menu>